--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,5 +3,10 @@ artifacts_root: artifacts
 data_ingestion:
  root_dir: artifacts/data_ingestion
  source_url: https://github.com/mayurkadam9833/Datasets/raw/refs/heads/main/insurance.zip
- local_data_file: artifacts/data_ingestion/insurance.csv
+ local_data_file: artifacts/data_ingestion/insurance.zip
  unzip_dir: artifacts/data_ingestion
+
+data_validation:
+ root_dir: artifacts/data_validation
+ unzip_data: artifacts/data_ingestion/insurance.csv
+ STATUS_FILE: artifacts/data_validation/validation_status.txt
