--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,5 +8,5 @@ data_ingestion:
 
 data_validation:
  root_dir: artifacts/data_validation
- unzip_data: artifacts/data_ingestion/insurance.csv
+ unzip_data_path: artifacts/data_ingestion/insurance.csv
  STATUS_FILE: artifacts/data_validation/validation_status.txt
