--- a/config/config.yaml
+++ b/config/config.yaml
@@ -20,3 +20,9 @@ model_trainer:
  train_data_path: artifacts/data_transformation/train.csv
  test_data_path: artifacts/data_transformation/test.csv
  model_name: model.joblib
+
+model_evalution:
+ root_dir: artifacts/model_evalution
+ test_data_path: artifacts/data_transformation/train.csv 
+ model_path: artifacts/model_trainer/model.joblib 
+ metric_file: artifacts/model_evalution/metric.json
