--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-pandas 
-numpy 
-matplotlib
-seaborn
-joblib
-imblearn
-python-box
-scikit-learn==1.3
-config-box
-ensure
-xgboost
-pyyaml
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.9.2
+seaborn==0.13.2
+joblib==1.4.2
+imbalanced-learn==0.12.3
+python-box==7.2.0
+scikit-learn==1.3.2
+config-box==0.1.0
+ensure==1.0.2
+xgboost==2.1.1
+pyyaml==6.0.2
+streamlit==1.37.0
 
 -e .
